--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="style1.css"/>
 </head>
-<body>
+<body onload="java()">
     <div class="wszystko">
         <header>
             <span><b>O</b>i<b>X</b></span>
         </header>
         <aside>
             <div class="table">
-                <div class="rectlg" id="1" onClick="count1()"></div>
-                <div class="rectsg" id="2" onClick="count2()"></div>
-                <div class="rectpg" id="3" onClick="count3()"></div>
+                <div class="rectlg" id="1"></div>
+                <div class="rectsg" id="2"></div>
+                <div class="rectpg" id="3"></div>
                 <div class="rectls" id="4"></div>
                 <div class="rect"   id="5"></div>
                 <div class="rectps" id="6"></div>
@@ -27,6 +27,6 @@
             <button>Zagraj</button>
         </div>
     </div>
-    <script src="js.js"></script>
+    <script src="js1.js"></script>
 </body>
 </html>
