--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="style1.css"/>
 </head>
-<body onload="java()">
+<body>
     <div class="wszystko">
         <header>
             <span><b>O</b>i<b>X</b></span>
