--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
                 <div class="rectld" id="7"></div>
                 <div class="rectsd" id="8"></div>
                 <div class="rectpd" id="9"></div>
-            </div>        
+                
+            </div> 
+            <div class="xwinoro" id="xwin">WYGRAŁ X</div>
+            <div class="xwinoro" id="owin">WYGRAŁO O</div> 
         </aside>
         <div class="button">
             <button onclick="window.location.reload()">Reset</button>
